[package]
name = "rust_game"
version = "0.0.1"
description = "Learn Rust with a simple, cross-platform, 2D game engine."
homepage = "https://github.com/teremo4ek/rust_game"
repository = "https://github.com/teremo4ek/rust_game"
edition = "2021"
readme = "README.md"
keywords = ["game", "graphics", "audio", "rusty"]
categories = ["game"]
license = "MIT"
exclude = [
    "/assets",
    "/.github",
    "/scenarios",
    "/tutorial",
    "/script",
    "release.toml",
    "RELEASE.md",
    ".gitignore",
]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_audio",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_winit",
    "png",
    "hdr",
    "mp3",
    "x11",
    "vorbis",
] }
bevy_prototype_lyon = "0.10.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"

[[example]]
name = "car_shoot"
path = "examples/scenarios/car_shoot.rs"

[[example]]
name = "road_race"
path = "examples/scenarios/road_race.rs"

[[example]]
name = "extreme_drivers_ed"
path = "examples/scenarios/extreme_drivers_ed.rs"
